--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             <div onclick="showContent('section1')">O que é?</div>
             <div onclick="showContent('section2')">Como usar</div>
             <div onclick="showContent('section3')">Quem somos nós</div>
+            <div onclick="showContent('section4')">Contato</div>
         </div>
         <div class="content" id="content">Click a section to display content here.</div>
     </div>
-    <div class="footer">Endobot by Endopolítica</div>
+    <div class="footer">
+        Endobot by Endopolítica <br>
+        <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a>
+    </div>
     <script src="js/script.js"></script>
     <script>
         showContent('section1')
