update privacy policy

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="footer">
         Endobot by Endopolítica <br>
-        <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a>
+        <a href="terms-of-service.html">Política de Privacidade e Termos de Uso</a>
     </div>
     <script src="js/script.js"></script>
     <script>
