--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,60 +1,70 @@
-**Termos de Uso**
-
-Data de Vigência: 11-03-2025
-
-Bem-vindo ao Endobot, um serviço fornecido pela Endopolítica. Ao utilizar o Endobot, você concorda com os seguintes Termos de Uso.
-
-### 1. Uso do Serviço
-O Endobot fornece informações e suporte sobre endometriose e dor crônica. O uso do serviço deve estar em conformidade com as leis e regulamentos aplicáveis.
-
-### 2. Responsabilidades do Usuário
-- O usuário concorda em utilizar o Endobot apenas para fins informativos.
-- O Endobot não substitui aconselhamento médico profissional.
-- Não é permitido o uso do serviço para atividades ilícitas ou abusivas.
-
-### 3. Privacidade e Dados
-O uso do Endobot está sujeito à nossa **Política de Privacidade**, que detalha como coletamos, armazenamos e protegemos os dados dos usuários.
-
-### 4. Isenção de Responsabilidade
-- O Endobot é um serviço informativo e não garante a precisão ou completude dos conteúdos fornecidos.
-- A Endopolítica não se responsabiliza por qualquer uso indevido das informações compartilhadas pelo Endobot.
-
-### 5. Modificações nos Termos
-A Endopolítica se reserva o direito de modificar estes Termos de Uso a qualquer momento. As alterações serão notificadas aos usuários.
-
-### 6. Contato
-Para dúvidas ou suporte, entre em contato pelo e-mail: hannah@endopolitica.org
-
-Ao utilizar o Endobot, você concorda com estes Termos de Uso.
-
----
-
-**Terms of Service**
-
-Effective Date: 03-11-2025
-
-Welcome to Endobot, a service provided by Endopolítica. By using Endobot, you agree to the following Terms of Service.
-
-### 1. Use of Service
-Endobot provides information and support regarding endometriosis and chronic pain. The use of this service must comply with applicable laws and regulations.
-
-### 2. User Responsibilities
-- Users agree to use Endobot for informational purposes only.
-- Endobot does not replace professional medical advice.
-- The service may not be used for illegal or abusive activities.
-
-### 3. Privacy and Data
-Use of Endobot is subject to our **Privacy Policy**, which details how we collect, store, and protect user data.
-
-### 4. Disclaimer
-- Endobot is an informational service and does not guarantee the accuracy or completeness of the content provided.
-- Endopolítica is not responsible for any misuse of information provided by Endobot.
-
-### 5. Changes to Terms
-Endopolítica reserves the right to modify these Terms of Service at any time. Users will be notified of any changes.
-
-### 6. Contact
-For inquiries or support, contact us at: hannah@endopolitica.org
-
-By using Endobot, you agree to these Terms of Service.
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Privacidade e Termos de Uso</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Política de Privacidade</h1>
+    <div class="section">
+        <h2>1. Informações que Coletamos</h2>
+        <p>Podemos coletar informações pessoais, incluindo, mas não se limitando a:</p>
+        <ul>
+            <li>Nome e detalhes de contato (ex.: e-mail, número de telefone)</li>
+            <li>Mensagens trocadas com o Endobot</li>
+            <li>Dados de uso para análises e melhorias do serviço</li>
+        </ul>
+    </div>
+    <div class="section">
+        <h2>2. Como Utilizamos Suas Informações</h2>
+        <p>Utilizamos os dados coletados para:</p>
+        <ul>
+            <li>Fornecer e melhorar o serviço do Endobot</li>
+            <li>Comunicar-se com os usuários sobre suas dúvidas</li>
+            <li>Analisar e aprimorar a experiência do usuário</li>
+        </ul>
+    </div>
+    <div class="section">
+        <h2>3. Direitos do Usuário</h2>
+        <p>Você tem o direito de:</p>
+        <ul>
+            <li>Solicitar acesso aos seus dados</li>
+            <li>Solicitar a exclusão dos seus dados</li>
+            <li>Optar por não receber comunicações a qualquer momento</li>
+        </ul>
+    </div>
+    
+    <h1>Termos de Uso</h1>
+    <div class="section">
+        <h2>1. Uso do Serviço</h2>
+        <p>O Endobot fornece informações e suporte sobre endometriose e dor crônica. O uso do serviço deve estar em conformidade com as leis e regulamentos aplicáveis.</p>
+    </div>
+    <div class="section">
+        <h2>2. Responsabilidades do Usuário</h2>
+        <ul>
+            <li>O usuário concorda em utilizar o Endobot apenas para fins informativos.</li>
+            <li>O Endobot não substitui aconselhamento médico profissional.</li>
+            <li>Não é permitido o uso do serviço para atividades ilícitas ou abusivas.</li>
+        </ul>
+    </div>
+    <div class="section">
+        <h2>3. Contato</h2>
+        <p>Para qualquer dúvida relacionada à privacidade ou termos de uso, entre em contato conosco pelo e-mail: <a href="mailto:hannah@endopolitica.org">hannah@endopolitica.org</a></p>
+    </div>
+</body>
+</html>
