--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div onclick="showContent('section4')">Contato</div>
         </div>
     </div>
+    <div id="content"></div>
     <div class="footer">
         Endobot by Endopolítica <br>
         <a href="terms-of-service.html">Política de Privacidade e Termos de Uso</a>
