fix styling issue

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div onclick="showContent('section3')">Quem somos nós</div>
             <div onclick="showContent('section4')">Contato</div>
         </div>
+        <div id="content" class="content"></div>
     </div>
-    <div id="content"></div>
     <div class="footer">
         Endobot by Endopolítica <br>
         <a href="terms-of-service.html">Política de Privacidade e Termos de Uso</a>
