--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div class="footer">
         Endobot by Endopolítica <br>
         <a href="terms-of-service.html">Política de Privacidade e Termos de Uso</a>
+        <br> 
+        <p>Tm Labs Desenvolvimento de Programas de Computador LTDA</p>
     </div>
     <script src="js/script.js"></script>
     <script>
